chore: 쿼리 파라미터로 URL을 받도록 수정
Co-authored-by: minjae <minjae8563@naver.com>